--- a/Test Portfolio.Html
+++ b/Test Portfolio.Html
@@ -1,78 +1,37 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <style>
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content"width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Com[atible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,600&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css"
+        <title></title>
+    </head>
 
-  li {
-    float: left;
-  }
+    <body> 
 
-  li a, .dropbtn {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
+    <nav>
+        <div class="logo">
+          <h4>My Portfolio</h4>
 
-  li a:hover, .dropdown:hover .dropbtn {
-    background-color: red;
-  }
+        </div>
+        <ul class="nav-links">
+        <ul>
+           <center> <li>
+                <a href="#"></a>
+            </li>       
+            <li>
+                <a href="#"></a>
+            </li>
+            <li>
+                <a href="#"></a>
+            </li>
+            <li>
+                <a href="#"></a>
+            </li>
+        </ul>
+    </nav>
+    </body>
 
-  li.dropdown {
-    display: inline-block;
-  }
-
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-
-  .dropdown-content a:hover {background-color: #f1f1f1;}
-
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  </style>
-  </head>
-  <body>
-
-  <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#news">Contact Me</a></li>
-    <li class="dropdown">
-      <a href="javascript:void(0)" class="dropbtn">My Projects</a>
-      <div class="dropdown-content">
-        <a href="#">Project 3</a>
-        <a href="#">Project 2</a>
-        <a href="#">Project 3</a>
-      </div>
-    </li>
-  </ul>
-
-<center><h1>My name is Jakub Muszynski</h1>
-<h2> This is my Portfolio</h2>
-
-
-
-</body>
 </html>
