--- a/Test Portfolio.Html
+++ b/Test Portfolio.Html
@@ -13,7 +13,7 @@
 
     <nav>
         <div class="logo">
-          <h4>Jakub Muszynski</h4>
+          <h4>Jakub Muszynski Portfolio</h4>
 
         </div>
         <ul class="nav-links">
