--- a/Test Portfolio.Html
+++ b/Test Portfolio.Html
@@ -13,7 +13,7 @@
 
     <nav>
         <div class="logo">
-          <h4>This is my first test Portfolio</h4>
+          <h4>This Is My FFirst Test Portfolio</h4>
 
         </div>
         <ul class="nav-links">
