--- a/Test Portfolio.Html
+++ b/Test Portfolio.Html
@@ -19,13 +19,13 @@
         <ul class="nav-links">
         <ul>
            <center> <li>
-                <a href="#"></a>
+                <a href="#">about me</a>
             </li>       
             <li>
-                <a href="#"></a>
+                <a href="#">Projects</a>
             </li>
             <li>
-                <a href="#"></a>
+                <a href="#">blog</a>
             </li>
             <li>
                 <a href="#"></a>
