--- a/Test Portfolio.Html
+++ b/Test Portfolio.Html
@@ -19,16 +19,16 @@
         <ul class="nav-links">
         <ul>
            <center> <li>
-                <a href="#">about me</a>
+                <a href="#">About me</a>
             </li>       
             <li>
                 <a href="#">Projects</a>
             </li>
             <li>
-                <a href="#">blog</a>
+                <a href="#">Blog</a>
             </li>
             <li>
-                <a href="#"></a>
+                <a href="#">Contact me</a>
             </li>
         </ul>
     </nav>
