--- a/Test Portfolio.Html
+++ b/Test Portfolio.Html
@@ -28,7 +28,7 @@
                 <a href="#">Blog</a>
             </li>
             <li>
-                <a href="#">Contact me</a>
+                <a href="#">home</a>
             </li>
         </ul>
     </nav>
