--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 
 
-<!-- partial -->
+<!-- Javascript file-->
 <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script><script  src="./script.js"></script>
 </body>
 </html>
