--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   	<div class='cursor2' id="cursor2"></div>
   	<div class='cursor3' id="cursor3"></div>
 
-  <!-- Link to page
+  <!-- wrapper class
   ================================================== -->
 
 <div class="wrapper">
