--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <header class="cd-header">
   		<div class="header-wrapper">
-  			<div class="nav-but-wrap">
+  			<div class="nav-but-wra">
   				<div class="menu-icon hover-target">
   					<span class="menu-icon__line menu-icon__line-left"></span>
   					<span class="menu-icon__line"></span>
