--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   ================================================== -->
 
 <div class="wrapper">
-  <div class="icon github" nclick="window.open('https://github.com/Jakub-Muszynski', '_blank');">
+  <div class="icon github" onclick="window.open('https://github.com/Jakub-Muszynski', '_blank');">
     <div class="tooltip">Github</div>
     <span><i class="fab fa-github"></i></span>
   </div>
