--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   			<ul class="nav__list">
   				<li class="nav__list-item active-nav"><a href="#" class="hover-target">Home</a></li>
   				<li class="nav__list-item"><a href="C:\Users\Jakub Muszynski\Desktop\GITHUB PROJECTS\Preparation for Portfolio\Blog Pages\BlogPage.html" class="hover-target">Portfolio</a></li>
-  				<li class="nav__list-item"><a href="#" class="hover-target">About me</a></li>
+  				<li class="nav__list-item"><a href="#" class="hover-target">Aout me</a></li>
   				<li class="nav__list-item"><a href="#" class="hover-target">Blog</a></li>		
   			</ul>
   		</div>
