--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Jakub Muszynski Programming Portfolio/<title>
-  <link rel="stylesheet" href="./style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'><link rel="stylesheet" href="./style.css">
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+  <title>Jakub Muszynski Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'><link rel="stylesheet" href="style.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'><link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -22,19 +21,32 @@
   	<div class="nav">
   		<div class="nav__content">
   			<ul class="nav__list">
-  				<li class="nav__list-item active-nav"><a href="#" class="hover-target">Home</a></li>
-  				<li class="nav__list-item"><a href="C:\Users\Jakub Muszynski\Desktop\GITHUB PROJECTS\Preparation for Portfolio\Blog Pages\BlogPage.html" class="hover-target">Portfolio</a></li>
-  				<li class="nav__list-item"><a href="#" class="hover-target">About me</a></li>
-  				<li class="nav__list-item"><a href="#" class="hover-target">Blog</a></li>		
+  				<li class="nav__list-item active-nav"><a href="C:\Users\Jakub Muszynski\Desktop\Portfolio Preperation\Homepage\index.html" class="hover-target">Home</a></li>
+  				<li class="nav__list-item"><a href="C:\Users\Jakub Muszynski\Desktop\Portfolio Preperation\Projectpage\Project_page.html" class="hover-target">Portfolio</a></li>
+  				<li class="nav__list-item"><a href="C:\Users\Jakub Muszynski\Desktop\Portfolio Preperation\Skillspage\index.html" class="hover-target">Skills</a></li>
+  				<li class="nav__list-item"><a href="C:\Users\Jakub Muszynski\Desktop\Portfolio Preperation\Blogpage\Blog.html" class="hover-target">Blog</a></li>
   			</ul>
   		</div>
   	</div>
 
+
+
+
   	<div class='cursor2' id="cursor2"></div>
   	<div class='cursor3' id="cursor3"></div>
 
-  <!-- wrapper class
+  <!-- Link to page
   ================================================== -->
+
+
+
+     <a href="C:\Users\Jakub Muszynski\Desktop\Portfolio Preperation\Projectpage\Project_page.html" <button class="btn btn--light">
+      <span class="btn__inner">
+        <span class="btn__slide"></span>
+        <span class="btn__content">View My Portfolio</span>
+      </span>
+    </button></a>
+
 
 <div class="wrapper">
   <div class="icon github" onclick="window.open('https://github.com/Jakub-Muszynski', '_blank');">
@@ -49,8 +61,11 @@
     <div class="tooltip">Resume</div>
     <span><i class="fas fa-file-pdf"></i></span>
   </div>
-  
-<!-- Javascript file-->
+
+
+
+
+<!-- partial -->
 <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script><script  src="./script.js"></script>
 </body>
 </html>
